Rewrite and refactors for so many things.